// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFlexGrid is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFlexGrid testClass1 testClass2 emotion-euiFlexGrid-l-row-3-responsive"
  data-test-subj="test subject string"
>
  <h2>
    My Child
  </h2>
</div>
`;

exports[`EuiFlexGrid props columns 1 is rendered 1`] = `
<div
  class="euiFlexGrid emotion-euiFlexGrid-l-row-1-responsive"
/>
`;

exports[`EuiFlexGrid props columns 2 is rendered 1`] = `
<div
  class="euiFlexGrid emotion-euiFlexGrid-l-row-2-responsive"
/>
`;

exports[`EuiFlexGrid props columns 3 is rendered 1`] = `
<div
  class="euiFlexGrid emotion-euiFlexGrid-l-row-3-responsive"
/>
`;

exports[`EuiFlexGrid props columns 4 is rendered 1`] = `
<div
  class="euiFlexGrid emotion-euiFlexGrid-l-row-4-responsive"
/>
`;

exports[`EuiFlexGrid props direction column is rendered 1`] = `
<div
  class="euiFlexGrid emotion-euiFlexGrid-l-column-1-responsive"
/>
`;

exports[`EuiFlexGrid props direction row is rendered 1`] = `
<div
  class="euiFlexGrid emotion-euiFlexGrid-l-row-1-responsive"
/>
`;

exports[`EuiFlexGrid props gutterSize l is rendered 1`] = `
<div
  class="euiFlexGrid emotion-euiFlexGrid-l-row-1-responsive"
/>
`;

exports[`EuiFlexGrid props gutterSize m is rendered 1`] = `
<div
  class="euiFlexGrid emotion-euiFlexGrid-m-row-1-responsive"
/>
`;

exports[`EuiFlexGrid props gutterSize none is rendered 1`] = `
<div
  class="euiFlexGrid emotion-euiFlexGrid-none-row-1-responsive"
/>
`;

exports[`EuiFlexGrid props gutterSize s is rendered 1`] = `
<div
  class="euiFlexGrid emotion-euiFlexGrid-s-row-1-responsive"
/>
`;

exports[`EuiFlexGrid props gutterSize xl is rendered 1`] = `
<div
  class="euiFlexGrid emotion-euiFlexGrid-xl-row-1-responsive"
/>
`;

exports[`EuiFlexGrid props responsive is rendered 1`] = `
<div
  class="euiFlexGrid emotion-euiFlexGrid-l-row-1"
/>
`;
